<resources>
    <string name="app_name">QR-Scanner</string>

    <!-- Action -->
    <string name="chat">Чат</string>
    <string name="check_list">Лист заказов</string>
    <string name="scanner">Сканнер</string>
    <string name="settings">Настройки</string>

    <!-- Settings -->
    <string name="dark_mode">Темная тема</string>
    <string name="stay_signed">Оставаться в системе</string>
    <string name="sign_out">Выйти из учетной записи</string>

    <!-- Orders -->
    <string name="send_order_to_wait_list">Перенести в лист ожидания</string>
    <string name="confirm_receipt">Подтвердить получение</string>
    <string name="remove">Удалить</string>
    <string name="on_wait_list">В листе ожидания</string>
    <string name="on_warehouse">На складе</string>
    <string name="in_wait_list">В лист ожидания</string>
    <string name="in_warehouse">На склад</string>
    <string name="add_to_warehouse">Добавить на склад</string>

    <!-- Auth -->
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="accounted">Уже есть аккаунт</string>

    <!-- QR Screen -->
    <string name="on_off_qr_decoding">QR-декодирование</string>
    <string name="on_off_flashlight">Подсветка</string>

    <!-- Chat -->
    <string name="send_message">Отправить сообщение</string>

    <!-- Other -->
    <string name="not_identified">Не идентифицируется</string>
    <string name="wrong">Ошибка</string>
    <string name="saving">Сохранение…</string>

    <!-- Network -->
    <string name="network_not_available">Разрыв интернет соединения</string>

</resources>